# nativexr

./: .gitattributes  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativexr/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Renderer.cpp
app/src/main/java/com/example/nativexr/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nativexr/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
